<?xml version="1.0" encoding="utf-8"?>

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/rb_group"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
>

    <RadioButton
            android:id="@+id/rb_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_nv_bar0"
            android:gravity="center_horizontal"
            android:text="@string/title_home"
            android:textColor="@drawable/selector_bar_text_color"
            android:visibility="gone"
    />

    <RadioButton
            android:id="@+id/rb_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_nv_bar1"
            android:gravity="center_horizontal"
            android:text="@string/title_announce"
            android:textColor="@drawable/selector_bar_text_color"
            android:visibility="gone"
    />

    <RadioButton
            android:id="@+id/rb_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_nv_bar2"
            android:gravity="center_horizontal"
            android:text="@string/title_notifications"
            android:textColor="@drawable/selector_bar_text_color"
            android:visibility="gone"
    />

    <RadioButton
            android:id="@+id/rb_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_nv_bar3"
            android:gravity="center_horizontal"
            android:text="@string/title_yewu"
            android:textColor="@drawable/selector_bar_text_color"
            android:visibility="gone"
    />
    <RadioButton
            android:id="@+id/rb_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/selector_nv_bar3"
            android:gravity="center_horizontal"
            android:text="@string/title_mine"
            android:textColor="@drawable/selector_bar_text_color"
            android:visibility="gone"
    />
</RadioGroup>

